texyed/themes/default.css
/** Texyed - default themes
 * @author		Jan Pecha, <janpecha@email.cz>
 * @license		see file license.txt
 * @version		2012-09-27-1
 */

@import url('ui.buttons.css');

.texyed-textarea {
	padding: 1em;
	border: 1px solid #ddd;
	background: #fbfbfb;
	line-height: 1.5em;
	display: block;
	font-family: Arial, sans-serif;
	font-size: 105% !important;
/*	box-shadow: -1px -1px 2px 3px #ccc;*/
/*	-webkit-box-shadow: 0px 0px 5px rgba(50, 50, 50, 0.6);*/
/*	-moz-box-shadow: 0px 0px 5px rgba(50, 50, 50, 0.6);*/
	box-shadow: inset 0px 0px 5px 3px rgba(240, 240, 240, 1);
/*	margin: 0 !important;*/
}

.texyed {
	background: #fff;
	position: relative;
	margin-bottom: 1em;
	overflow: hidden;
	margin-left: auto;
	margin-right: auto;
}

/* Buttons - see file ui.buttons.css */

/* Windows */
.texyed .ui-window {
	width: 100%;
	height: 100%;
	overflow: none;
	background: rgba(20,20,20,0.95);
	color: #fff;
	position: absolute;
	left: 0;
	top: 0;
	display: none;
}

.texyed .ui-window .ui-title {
	background: inherit;
	padding: 0.4em 0.8em 0.1em;
	color: #ddd;
	font-weight: bold;
	position: relative;
	top: 0;
	left: 0;
	border-bottom: 1px solid #000;
	z-index: 100;
/*	font-size: 90%;*/
}

.texyed .ui-window .ui-close {
	font-weight: bold;
	position: absolute;
	right: 0.6em;
	top: 0.45em;
	display: block;
	line-height: 1em;
	overflow: hidden;
	vertical-align: middle;
	padding: 0.2em 0.2em 0.1em 0.2em;
}

.texyed .ui-window .ui-close:hover {
	background: #444;
	cursor: pointer;
}

.texyed .ui-window .ui-content {
	padding: 2.8em 1em 1em;
	border-top: 1px solid transparent;
	overflow: auto;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	width: 100%;
	height: 100%;
	position: absolute;
	z-index: 0;
	top: 0;
	left: 0;
}

.texyed .ui-window.ui-show {
	display: block;
}

/* Toolbars */
.texyed .ui-toolbar {
/*	background: #eee;*/
/*	border: 1px solid #ddd;*/
/*	border-bottom-width: 0;*/
	border: 1px solid #bbb;
	background: #eee;
}

.texyed .ui-toolbar.ui-button-group {
	margin: 0;
}

.texyed .ui-toolbar.ui-button-group .ui-button {
	border-radius: 0;
	border-top-width: 0;
	border-bottom-width: 0;
}

.texyed .ui-toolbar.ui-button-group .ui-button:first-child {
	border-left-width: 0;
}

.texyed iframe.texyed-preview {
	width: 100%;
	height: 100%;
	background: #fbfbfb;
	border: 1px solid silver;
}

